# advent-of-code-2025

./: .editorconfig  .envrc.dist  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day10.rs  lib.rs  mod.rs
