cargo-features = ["edition2024"]

[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc_driver = "0.3.6"
derive_more = { version = "2.1.0", features = ["full"] }
indoc = { version = "2.0.7", default-features = false }
itertools = { version = "0.14" }
num = "0.4.3"
peg = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
rstest = { version = "0.26.1", default-features = false }

[lib]
name = "aoc_2025"
path = "src/lib.rs"
